      referencing map in use.
      
    - Fixed a unit of work issue whereby the foreign
      key attribute on an item contained within a collection 
      owned by an object being deleted would not be set to
      None if the relation() was self-referential. [ticket:1376]

    - Fixed Query.update() and Query.delete() failures with eagerloaded
      relations. [ticket:1378]

- schema
    - Added a quote_schema() method to the IdentifierPreparer class
      so that dialects can override how schemas get handled. This
      enables the MSSQL dialect to treat schemas as multipart
      identifiers, such as 'database.owner'. [ticket: 594, 1341]

- sql
    - ``sqlalchemy.extract()`` is now dialect sensitive and can
      extract components of timestamps idiomatically across the
      supported databases, including SQLite.

    - Fixed __repr__() and other _get_colspec() methods on
      ForeignKey constructed from __clause_element__() style
      construct (i.e. declarative columns).  [ticket:1353]

- mssql
    - Modified how savepoint logic works to prevent it from
      stepping on non-savepoint oriented routines. Savepoint
      support is still very experimental.

    - Added in reserved words for MSSQL that covers version 2008
      and all prior versions. [ticket:1310]

    - Corrected problem with information schema not working with a
      binary collation based database. Cleaned up information schema
      since it is only used by mssql now. [ticket:1343]

- sqlite
    - Corrected the SLBoolean type so that it properly treats only 1
      as True. [ticket:1402]

    - Corrected the float type so that it correctly maps to a
      SLFloat type when being reflected. [ticket:1273]

- extensions

    - Fixed adding of deferred or other column properties to a
      declarative class. [ticket:1379]

0.5.3
=====
- orm
    - The "objects" argument to session.flush() is deprecated.
      State which represents the linkage between a parent and